--- a/waterpolo.html
+++ b/waterpolo.html
@@ -2,9 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>WATER POLO</title>
-<style type="text/css" media="all">
-	@import "global.css";
-</style>
+<link rel="stylesheet" type="text/css" href="global.css">
 
 </head>
 
